# Munajjam

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PSEUDO CODE.md  Quran Ayas List.csv  README.md  ROADMAP.md  align_segments.py  aligned.json  batch_process.py  clean.py  config.py  current_config.json  detect_silence.py  download.py  logging_utils.py  main.py  quran.db  save_to_db.py  segments.json  silences.json  to_wav.py  transcribe.py
.github/workflows/: ci.yml  publish.yml
examples/: 01_basic_usage.py  02_comparing_strategies.py  03_advanced_configuration.py  04_batch_processing.py  README.md
munajjam/: README.md  pyproject.toml
munajjam/examples/: test_alignment.py
munajjam/munajjam/: config.py
munajjam/munajjam/core/: __init__.py  aligner.py  aligner_dp.py  arabic.py  ctc_segmentation.py  forced_aligner.py  hybrid.py  matcher.py  phonetic.py  word_level_dp.py  zone_realigner.py
munajjam/munajjam/data/: quran_ayat.csv
munajjam/munajjam/models/: __init__.py  ayah.py  segment.py  surah.py
munajjam/munajjam/transcription/: silence.py  whisper.py
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_real_data.py
tests/unit/: __init__.py  test_aligner.py  test_arabic.py  test_data.py  test_matcher.py  test_models.py  test_phonetic.py  test_silence.py  test_word_level_dp.py  test_zone_realigner.py
عمر النبراوي-01107e9a-98e2-4fcf-951f-902fc1635bbe/74-المدثر/: Logging.csv
